# fcra-compliance-researcher

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  ISSUES.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/agents/: base.py  extraction_agent.py  merge_agent.py  sourcing_agent.py  task_manager.py  tasks.py  validation_agent.py
app/config/: settings.py
app/core/: celery_app.py  crawl.py  cross_validation.py  db.py  dlq.py  embeddings.py  eval.py  gaps.py  github_service.py  legislative_monitor.py  logger.py  notifications.py  paths.py  provenance.py  provenance_graph.py  queue.py  research_agent.py  retrieval.py  runner.py  schema_enums.py  schema_versioning.py  search.py  secrets.py  simple_vector_store.py  sourcing_templates.py  trace.py  types.py  validation_rules.py  vector_ops.py  vector_store.py
app/dashboard/: api.py  api_review.py  auth.py  server.py
app/scripts/: dlq_cli.py  enqueue.py  schema_cli.py  vector_cli.py  vector_maint.py
app/tests/: test_celery_path_smoke.py  test_celery_task.py  test_concurrency_basic.py  test_queue.py  (+33 more)
data/: test_jurisdictions.json
deploy/: README-deploy.md  docker-compose.prod.yml  docker-compose.staging.yml
docs/: SCHEMA_SPECIFICATION.md  architecture.md  crawl_spec.md  evaluation_spec.md  implementation_plan.md  orchestration_spec.md  retrieval_spec.md  search_spec.md
env/: prod.env.example  staging.env.example
schema/: cra-enums.json  cra-matrix.schema.json
tools/: apply_research_patch.py  dead_letter_queue.json  research_queue.json  validate_matrix.py
(+3 files in other folders)
